UI: Fix too long links breaking up the layout.

--- a/src/styles/_item.sass
+++ b/src/styles/_item.sass
@@ -640,6 +640,7 @@ body[data-context="post-edit"]
         flex: 1
         font-size: $font-size-small
         line-height: $font-size
+        max-width: 100vh
         text-decoration: none
 
         &:hover
